--- a/services/package.json
+++ b/services/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "dependencies": {
     "aws-sdk": "^2.1289.0",
+    "stripe": "^11.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
