--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^7.31.1",
+    "@sentry/tracing": "^7.31.1",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@sentry/webpack-plugin": "^1.20.0",
     "@serverless-stack/static-site-env": "^1.18.4"
   }
 }
